--- a/__PixiJS Novo Inicio/index.html
+++ b/__PixiJS Novo Inicio/index.html
@@ -12,11 +12,11 @@
     </style>
   </head>
   <body>
-    <script src="./node_modules/pixi.js/dist/pixi.js"></script>
-    <script src="https://pixijs.io/particle-emitter/dist/particle-emitter.js"></script>
+    <canvas id="stage"></canvas>
 
-    <script src="https://pixijs.io/particle-emitter/examples/js/ParticleExample.js"></script>
-    
-    <script src="index.js"></script>
+    <script src="./scripts/pixi.js"></script>
+    <script src="./scripts/particle-emitter.js"></script>
+    <script src="./scripts/ParticleExampleCustom.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
