--- a/__PixiJS Novo Inicio/index.html
+++ b/__PixiJS Novo Inicio/index.html
@@ -17,6 +17,6 @@
     <script src="./scripts/pixi.js"></script>
     <script src="./scripts/particle-emitter.js"></script>
     <script src="./scripts/ParticleExampleCustom.js"></script>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
