--- a/__PixiJS Novo Inicio/index.html
+++ b/__PixiJS Novo Inicio/index.html
@@ -9,10 +9,13 @@
         padding: 0;
         margin: 0;
       }
+      /* body {
+        background-color: navy;
+      } */
     </style>
   </head>
   <body>
-    <canvas id="stage"></canvas>
+    <!-- <canvas id="stage"></canvas> -->
 
     <script src="./scripts/pixi.js"></script>
     <script src="./scripts/particle-emitter.js"></script>
