--- a/__PixiJS Novo Inicio/index.html
+++ b/__PixiJS Novo Inicio/index.html
@@ -9,6 +9,14 @@
         padding: 0;
         margin: 0;
       }
+      body {
+        background-color: #161616;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+      }
     </style>
   </head>
   <body>
