--- a/index.html
+++ b/index.html
@@ -4,19 +4,62 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fountains & Rockets</title>
+    <link data-rh="true" rel="icon" href="./images/favicon.png" />
     <style>
       * {
         padding: 0;
         margin: 0;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #ccc;
+      }
+      body {
+        background-color: #161616;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+      }
+      .controls {
+        margin-bottom: 1rem;
+        display: flex;
+      }
+      .controls label {
+        margin-right: 1rem;
+      }
+      .btn {
+        padding: 3px 10px 6px 10px;
+        background-color: #272727;
+        color: #ccc;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 13px;
+      }
+      .btn:hover {
+        background-color: #3d3f45;
+      }
+      .btn.git {
+        text-decoration: none;
+        margin: 0 .5rem;
       }
     </style>
   </head>
   <body>
-    <script src="./node_modules/pixi.js/dist/pixi.js"></script>
-    <script src="https://pixijs.io/particle-emitter/dist/particle-emitter.js"></script>
+    <div class="controls">
+      <input type="radio" id="option1" name="canvasSize" value="0" checked />
+      <label for="option1">1280x720 (video)</label>
+      <input type="radio" id="option2" name="canvasSize" value="1" />
+      <label for="option2">1024x768 (readme)</label>
+      <button class="btn" id="applySizeBtn">apply</button>
+      <a class="btn git" target="_blank" href="https://github.com/scsx/PixiJS-JSM">git</a>
+      <div id="fpsDisplay">FPS: </div>
+    </div>
 
-    <script src="https://pixijs.io/particle-emitter/examples/js/ParticleExample.js"></script>
-    
-    <script src="index.js"></script>
+    <script src="./scripts/pixi.js"></script>
+    <script src="./scripts/particle-emitter.js"></script>
+    <script src="./scripts/ParticleExampleCustom.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
