--- a/index.html
+++ b/index.html
@@ -5,46 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fountains & Rockets</title>
     <link data-rh="true" rel="icon" href="./images/favicon.png" />
-    <style>
-      * {
-        padding: 0;
-        margin: 0;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: #ccc;
-      }
-      body {
-        background-color: #161616;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-      }
-      .controls {
-        margin-bottom: 1rem;
-        display: flex;
-      }
-      .controls label {
-        margin-right: 1rem;
-      }
-      .btn {
-        padding: 3px 10px 6px 10px;
-        background-color: #272727;
-        color: #ccc;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 13px;
-      }
-      .btn:hover {
-        background-color: #3d3f45;
-      }
-      .btn.git {
-        text-decoration: none;
-        margin: 0 .5rem;
-      }
-    </style>
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
     <div class="controls">
